--- a/VodafoneTask/Modules/MainVC/Cells/AdCell/AdTableViewCell.xib
+++ b/VodafoneTask/Modules/MainVC/Cells/AdCell/AdTableViewCell.xib
@@ -9,17 +9,17 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="175" id="KGk-i7-Jjw" customClass="AdTableViewCell" customModule="VodafoneTask" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="175"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="254" id="KGk-i7-Jjw" customClass="AdTableViewCell" customModule="VodafoneTask" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="254"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" ambiguous="YES" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="175"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="254"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ad-placeholder" highlighted="YES" translatesAutoresizingMaskIntoConstraints="NO" id="4am-At-4IJ">
-                        <rect key="frame" x="16" y="0.0" width="288" height="150"/>
+                        <rect key="frame" x="16" y="0.0" width="288" height="250"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="150" id="tOF-m6-BqI"/>
+                            <constraint firstAttribute="height" constant="250" id="tOF-m6-BqI"/>
                         </constraints>
                     </imageView>
                 </subviews>
@@ -31,7 +31,7 @@
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
-            <point key="canvasLocation" x="69.565217391304358" y="91.40625"/>
+            <point key="canvasLocation" x="69.565217391304358" y="117.85714285714285"/>
         </tableViewCell>
     </objects>
     <resources>
