--- a/VodafoneTask/Modules/MainVC/Cells/AdCell/AdTableViewCell.xib
+++ b/VodafoneTask/Modules/MainVC/Cells/AdCell/AdTableViewCell.xib
@@ -16,7 +16,7 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="254"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ad-placeholder" highlighted="YES" translatesAutoresizingMaskIntoConstraints="NO" id="4am-At-4IJ">
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ad-placeholder" translatesAutoresizingMaskIntoConstraints="NO" id="4am-At-4IJ">
                         <rect key="frame" x="16" y="0.0" width="288" height="250"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="250" id="tOF-m6-BqI"/>
